# PAMSI

./: README.md
POJEKT 3/: CMakeLists.txt  Makefile  README.md  board.cpp  board.hh  example  kik  kik.cpp  kik.hh  main.cpp  output  schemat_klas.xmi  size.hh
POJEKT 3/inc/: size.hh
POJEKT 3/src/: a.out  main.cpp
POJEKT3/: Makefile
POJEKT3/src/: board.cpp
PROJEKT 1/: Makefile  README.md  klient.cpp  klient.h  lista.cpp  lista.h  output  projekt1.cpp  test.cpp  test.h
PROJEKT 2/: README.md  a.out  er.cpp  film.cpp  film.h  heap  heapsort.cpp  main  makefile  merge  merge.cpp  mergeSort  mergesort.cpp  output  quick  quick2  quicksort.cpp  quicksprt.cpp
PROJEKT3/: Makefile  kik
PROJEKT3/inc/: board.hh  kik.hh
PROJEKT3/src/: board.cpp  kik.cpp  main.cpp
